flex_bsion/example/flexbison/purecalc.output
Grammar

    0 $accept: calc $end

    1 calc: EOL
    2     | stmt EOL
    3     | LET NAME '(' symlist ')' '=' list EOL

    4 stmt: IF exp THEN list
    5     | IF exp THEN list ELSE list
    6     | WHILE exp DO list
    7     | exp

    8 list: /* empty */
    9     | stmt ';' list

   10 exp: exp CMP exp
   11    | exp '+' exp
   12    | exp '-' exp
   13    | exp '*' exp
   14    | exp '/' exp
   15    | '|' exp
   16    | '(' exp ')'
   17    | '-' exp
   18    | NUMBER
   19    | FUNC '(' explist ')'
   20    | NAME
   21    | NAME '=' exp
   22    | NAME '(' explist ')'

   23 explist: exp
   24        | exp ',' explist

   25 symlist: NAME
   26        | NAME ',' symlist


Terminals, with rules where they appear

$end (0) 0
'(' (40) 3 16 19 22
')' (41) 3 16 19 22
'*' (42) 13
'+' (43) 11
',' (44) 24 26
'-' (45) 12 17
'/' (47) 14
';' (59) 9
'=' (61) 3 21
'|' (124) 15
error (256)
NUMBER (258) 18
NAME (259) 3 20 21 22 25 26
FUNC (260) 19
EOL (261) 1 2 3
IF (262) 4 5
THEN (263) 4 5
ELSE (264) 5
WHILE (265) 6
DO (266) 6
LET (267) 3
CMP (268) 10
UMINUS (269)


Nonterminals, with rules where they appear

$accept (25)
    on left: 0
calc (26)
    on left: 1 2 3, on right: 0
stmt (27)
    on left: 4 5 6 7, on right: 2 9
list (28)
    on left: 8 9, on right: 3 4 5 6 9
exp (29)
    on left: 10 11 12 13 14 15 16 17 18 19 20 21 22, on right: 4 5
    6 7 10 11 12 13 14 15 16 17 21 23 24
explist (30)
    on left: 23 24, on right: 19 22 24
symlist (31)
    on left: 25 26, on right: 3 26


state 0

    0 $accept: . calc $end

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    EOL     shift, and go to state 4
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    LET     shift, and go to state 7
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    calc  go to state 11
    stmt  go to state 12
    exp   go to state 13


state 1

   18 exp: NUMBER .

    $default  reduce using rule 18 (exp)


state 2

   20 exp: NAME .
   21    | NAME . '=' exp
   22    | NAME . '(' explist ')'

    '='  shift, and go to state 14
    '('  shift, and go to state 15

    $default  reduce using rule 20 (exp)


state 3

   19 exp: FUNC . '(' explist ')'

    '('  shift, and go to state 16


state 4

    1 calc: EOL .

    $default  reduce using rule 1 (calc)


state 5

    4 stmt: IF . exp THEN list
    5     | IF . exp THEN list ELSE list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  go to state 17


state 6

    6 stmt: WHILE . exp DO list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  go to state 18


state 7

    3 calc: LET . NAME '(' symlist ')' '=' list EOL

    NAME  shift, and go to state 19


state 8

   17 exp: '-' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  go to state 20


state 9

   15 exp: '|' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  go to state 21


state 10

   16 exp: '(' . exp ')'

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  go to state 22


state 11

    0 $accept: calc . $end

    $end  shift, and go to state 23


state 12

    2 calc: stmt . EOL

    EOL  shift, and go to state 24


state 13

    7 stmt: exp .
   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp

    CMP  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 7 (stmt)


state 14

   21 exp: NAME '=' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  go to state 30


state 15

   22 exp: NAME '(' . explist ')'

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp      go to state 31
    explist  go to state 32


state 16

   19 exp: FUNC '(' . explist ')'

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp      go to state 31
    explist  go to state 33


state 17

    4 stmt: IF exp . THEN list
    5     | IF exp . THEN list ELSE list
   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp

    THEN  shift, and go to state 34
    CMP   shift, and go to state 25
    '+'   shift, and go to state 26
    '-'   shift, and go to state 27
    '*'   shift, and go to state 28
    '/'   shift, and go to state 29


state 18

    6 stmt: WHILE exp . DO list
   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp

    DO   shift, and go to state 35
    CMP  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29


state 19

    3 calc: LET NAME . '(' symlist ')' '=' list EOL

    '('  shift, and go to state 36


state 20

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   17    | '-' exp .

    $default  reduce using rule 17 (exp)


state 21

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   15    | '|' exp .

    $default  reduce using rule 15 (exp)


state 22

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   16    | '(' exp . ')'

    CMP  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ')'  shift, and go to state 37


state 23

    0 $accept: calc $end .

    $default  accept


state 24

    2 calc: stmt EOL .

    $default  reduce using rule 2 (calc)


state 25

   10 exp: exp CMP . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  go to state 38


state 26

   11 exp: exp '+' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  go to state 39


state 27

   12 exp: exp '-' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  go to state 40


state 28

   13 exp: exp '*' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  go to state 41


state 29

   14 exp: exp '/' . exp

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp  go to state 42


state 30

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   21    | NAME '=' exp .

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 21 (exp)


state 31

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   23 explist: exp .
   24        | exp . ',' explist

    CMP  shift, and go to state 25
    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29
    ','  shift, and go to state 43

    $default  reduce using rule 23 (explist)


state 32

   22 exp: NAME '(' explist . ')'

    ')'  shift, and go to state 44


state 33

   19 exp: FUNC '(' explist . ')'

    ')'  shift, and go to state 45


state 34

    4 stmt: IF exp THEN . list
    5     | IF exp THEN . list ELSE list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    $default  reduce using rule 8 (list)

    stmt  go to state 46
    list  go to state 47
    exp   go to state 13


state 35

    6 stmt: WHILE exp DO . list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    $default  reduce using rule 8 (list)

    stmt  go to state 46
    list  go to state 48
    exp   go to state 13


state 36

    3 calc: LET NAME '(' . symlist ')' '=' list EOL

    NAME  shift, and go to state 49

    symlist  go to state 50


state 37

   16 exp: '(' exp ')' .

    $default  reduce using rule 16 (exp)


state 38

   10 exp: exp . CMP exp
   10    | exp CMP exp .
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp

    '+'  shift, and go to state 26
    '-'  shift, and go to state 27
    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    CMP  error (nonassociative)

    $default  reduce using rule 10 (exp)


state 39

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   11    | exp '+' exp .
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 11 (exp)


state 40

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   12    | exp '-' exp .
   13    | exp . '*' exp
   14    | exp . '/' exp

    '*'  shift, and go to state 28
    '/'  shift, and go to state 29

    $default  reduce using rule 12 (exp)


state 41

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   13    | exp '*' exp .
   14    | exp . '/' exp

    $default  reduce using rule 13 (exp)


state 42

   10 exp: exp . CMP exp
   11    | exp . '+' exp
   12    | exp . '-' exp
   13    | exp . '*' exp
   14    | exp . '/' exp
   14    | exp '/' exp .

    $default  reduce using rule 14 (exp)


state 43

   24 explist: exp ',' . explist

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    exp      go to state 31
    explist  go to state 51


state 44

   22 exp: NAME '(' explist ')' .

    $default  reduce using rule 22 (exp)


state 45

   19 exp: FUNC '(' explist ')' .

    $default  reduce using rule 19 (exp)


state 46

    9 list: stmt . ';' list

    ';'  shift, and go to state 52


state 47

    4 stmt: IF exp THEN list .
    5     | IF exp THEN list . ELSE list

    ELSE  shift, and go to state 53

    $default  reduce using rule 4 (stmt)


state 48

    6 stmt: WHILE exp DO list .

    $default  reduce using rule 6 (stmt)


state 49

   25 symlist: NAME .
   26        | NAME . ',' symlist

    ','  shift, and go to state 54

    $default  reduce using rule 25 (symlist)


state 50

    3 calc: LET NAME '(' symlist . ')' '=' list EOL

    ')'  shift, and go to state 55


state 51

   24 explist: exp ',' explist .

    $default  reduce using rule 24 (explist)


state 52

    9 list: stmt ';' . list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    $default  reduce using rule 8 (list)

    stmt  go to state 46
    list  go to state 56
    exp   go to state 13


state 53

    5 stmt: IF exp THEN list ELSE . list

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    $default  reduce using rule 8 (list)

    stmt  go to state 46
    list  go to state 57
    exp   go to state 13


state 54

   26 symlist: NAME ',' . symlist

    NAME  shift, and go to state 49

    symlist  go to state 58


state 55

    3 calc: LET NAME '(' symlist ')' . '=' list EOL

    '='  shift, and go to state 59


state 56

    9 list: stmt ';' list .

    $default  reduce using rule 9 (list)


state 57

    5 stmt: IF exp THEN list ELSE list .

    $default  reduce using rule 5 (stmt)


state 58

   26 symlist: NAME ',' symlist .

    $default  reduce using rule 26 (symlist)


state 59

    3 calc: LET NAME '(' symlist ')' '=' . list EOL

    NUMBER  shift, and go to state 1
    NAME    shift, and go to state 2
    FUNC    shift, and go to state 3
    IF      shift, and go to state 5
    WHILE   shift, and go to state 6
    '-'     shift, and go to state 8
    '|'     shift, and go to state 9
    '('     shift, and go to state 10

    $default  reduce using rule 8 (list)

    stmt  go to state 46
    list  go to state 60
    exp   go to state 13


state 60

    3 calc: LET NAME '(' symlist ')' '=' list . EOL

    EOL  shift, and go to state 61


state 61

    3 calc: LET NAME '(' symlist ')' '=' list EOL .

    $default  reduce using rule 3 (calc)
